--- a/.github/workflows/pythonpublish.yml
+++ b/.github/workflows/pythonpublish.yml
@@ -19,11 +19,14 @@ jobs:
       with:
         python-version: '3.6'
     - name: Install dependencies
+      working-directory: ./kusto-logging
       run: |
         python -m pip install --upgrade pip
         pip install setuptools wheel twine
         python setup.py sdist bdist_wheel
+
     - name: Publish distribution 📦 to Test PyPI
+      working-directory: ./kusto-logging
       uses: pypa/gh-action-pypi-publish@master
       with:
         password: ${{ secrets.TEST_PYPI_API_TOKEN }}
