--- a/.github/workflows/pythonpublish.yml
+++ b/.github/workflows/pythonpublish.yml
@@ -23,10 +23,9 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install setuptools wheel twine
-        python setup.py sdist bdist_wheel
+        python -m  build --sdist --wheel --outdir dist/
 
     - name: Publish distribution 📦 to Test PyPI
-      working-directory: ./kusto-logging
       uses: pypa/gh-action-pypi-publish@master
       with:
         password: ${{ secrets.TEST_PYPI_API_TOKEN }}
