--- a/.github/workflows/pythonpublish.yml
+++ b/.github/workflows/pythonpublish.yml
@@ -22,7 +22,7 @@ jobs:
       working-directory: ./kusto-logging
       run: |
         python -m pip install --upgrade pip
-        pip install setuptools wheel twine
+        pip install setuptools wheel twine build
         python -m  build --sdist --wheel --outdir dist/
 
     - name: Publish distribution 📦 to Test PyPI
