--- a/.github/workflows/pythonpublish.yml
+++ b/.github/workflows/pythonpublish.yml
@@ -19,14 +19,14 @@ jobs:
       with:
         python-version: '3.6'
     - name: Install dependencies
-      working-directory: ./kusto-logging
       run: |
         python -m pip install --upgrade pip
-        pip install setuptools wheel twine build
-        python -m  build --sdist --wheel --outdir dist/
-
-    - name: Publish distribution 📦 to Test PyPI
-      uses: pypa/gh-action-pypi-publish@master
-      with:
-        password: ${{ secrets.TEST_PYPI_API_TOKEN }}
-        repository_url: https://test.pypi.org/legacy/
+        pip install setuptools wheel twine
+    - name: Publish kusto-logging
+      working-directory: ./kusto-logging
+      env:
+        TWINE_USERNAME: jfsix
+        TWINE_PASSWORD: ${{ secrets.pypi_password }}
+      run: |
+        python setup.py sdist bdist_wheel
+        twine upload --repository testpypi dist/*
